--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
-
+    
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyBclxa9quj7sJ1EtbbDsuEahgmcoK0rtj0",
-        authDomain: "fruit-cather-9ede8.firebaseapp.com",
-        databaseURL: "https://fruit-cather-9ede8-default-rtdb.firebaseio.com",
-        projectId: "fruit-cather-9ede8",
-        storageBucket: "fruit-cather-9ede8.appspot.com",
-        messagingSenderId: "56666651920",
-        appId: "1:56666651920:web:fb17406a0a933c458df995"
+        apiKey: "AIzaSyC4BUBzZyI9XgTnaOtXIDLGD7uIUMiElGc",
+        authDomain: "c39-fruitcatcher.firebaseapp.com",
+        databaseURL: "https://c39-fruitcatcher.firebaseio.com",
+        projectId: "c39-fruitcatcher",
+        storageBucket: "c39-fruitcatcher.appspot.com",
+        messagingSenderId: "686122669825",
+        appId: "1:686122669825:web:489d7ecfc2fcb4f9a66d00"
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
@@ -28,7 +28,6 @@
     <!--Add Your JS files here -->
     <script src="js/player.js"></script>
     <script src="js/form.js"></script>
-    <script src="js/game.js"></script>
   
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
